--- a/Rmd/report.Rmd
+++ b/Rmd/report.Rmd
@@ -18,7 +18,13 @@ knitr::opts_chunk$set(
   results = "asis",
   dev.args = list(png = list(type = "cairo"))
 )
-options(knitr.kable.NA = '-')
+options(knitr.kable.NA = '-',
+        ggplot2.discrete.fill = wesanderson::wes_palettes$Darjeeling1,
+        ggplot2.discrete.colour = wesanderson::wes_palettes$Darjeeling1,
+        ggplot2.continuous.fill = wesanderson::wes_palettes$Darjeeling1,
+        ggplot2.continuous.colour = wesanderson::wes_palettes$Darjeeling1
+)
+
 ```
 
 
@@ -28,6 +34,7 @@ options(knitr.kable.NA = '-')
 library(tidyverse)
 library(gt)
 library(lubridate)
+library(wesanderson)
 library(ggdist)
 library(readxl)
 library(tidytext)
@@ -43,24 +50,19 @@ source(here("R", "utils.R"))
 # import data
 trials <- readRDS(here("Data", "trials.rds"))
 participants <- readRDS(here("Data", "participants.rds"))
-responses <- readRDS(here("Data", "accuracy.rds"))
+responses <- readRDS(here("Data", "responses.rds"))
 jtrace <- readRDS(here("Data", "jtrace.rds"))
 
 # import models
 fit_jtrace <- readRDS(here("Results", "fit_jtrace.rds"))
-fit_responses <- readRDS(here("Results", "fit.rds"))
-fit_responses_coefs <- readRDS(here("Results", "coefficients.rds")) %>% 
-  select(term, estimate, std.error, conf.low, conf.high)
-
-
+fit_responses <- readRDS(here("Results", "fit_responses.rds"))
 
 ```
 
 
-# Experimental task: Translation Elicitation
+# Experimental task
 
 ## Methods
-
 
 ### Participants {.tabset .tab-pills}
 
@@ -69,7 +71,7 @@ participants_coded <- participants %>%
   mutate(valid_participant = ifelse(valid_participant, "Valid", "Not valid"))
 ```
 
-We collected data from `r format(as_date(min(participants$date)), "%B %dth %Y")` to `r format(as_date(max(participants$date)), "%B %dth %Y")`. We tested `r length(unique(participants$participant))` participants. `r length(unique(participants$participant[participants$group=="ENG-SPA"]))` were English natives tested in Spanish, `r length(unique(participants$participant[participants$group=="ENG-CAT"]))` were English natives tested in Catalan, and `r length(unique(participants$participant[participants$group=="SPA-CAT"]))` were Spanish natives tested in Catalan. `r sum(!participants$valid_participant)` failed to meet all the inclusion criteria and were excluded from further analyses.
+We collected data from `r format(as_date(min(participants$date)), "%B %dth %Y")` to `r format(as_date(max(participants$date)), "%B %dth %Y")`. We tested `r length(unique(participants$participant))` participants. `r length(unique(participants$participant[participants$group=="ENG-SPA"]))` were English natives tested in Spanish, `r length(unique(participants$participant[participants$group=="ENG-CAT"]))` were English natives tested in Catalan, and `r length(unique(participants$participant[participants$group=="SPA-CAT"]))` were Spanish natives tested in Catalan. `r sum(!participants$valid_participant)` failed to meet all the inclusion criteria and were excluded from further analyses. The final sample comprised data from `r sum(!participants$valid_participant)` participants, `r sum(participants$valid_participant[participants$group=="ENG-SPA"])` in the ENG-SPA group, `r sum(participants$valid_participant[participants$group=="ENG-CAT"])` in the ENG-CAT group, and `r sum(participants$valid_participant[participants$group=="SPA-CAT"])` in the SPA-CAT group.
 
 Participants were included if^[We originally planned to exclude participants that reported any visual impairment that glasses would not correct. This item was phrased as Do you have normal or corrected-to-normal VISION? (Yes/No) in English, and as ¿Tienes problemas de VISIÓN que unas gafas o lentes de contacto NO corrijan? (Sí/No). Surprisingly, the proportion of Spanish participants that reported visual impairment was implausibly large (n = 6, 18.18%). This is possibly due to some participants using glasses daily and not having read the item until the end, where it is indicated that the use of glasses is considered as normal vision]:
 
@@ -121,7 +123,7 @@ participants_coded %>%
     legend.position = "top",
     axis.title.x = element_blank(),
     panel.grid.major.y = element_line(linetype = "dotted", colour = "grey")
-  ) 
+  )
 ```
 
 #### Demographic information
@@ -201,6 +203,8 @@ participants_valid %>%
 
 ### Stimuli {.tabset .tab-pill}
 
+Participants in the ENG-SPA listened to `r nrow(trials[trials$group=="ENG-SPA",])` Spanish words, and participants in the ENG-CAT and the SPA-CAT groups listened to `nrow(trials[trials$group=="ENG-CAT",]) trials`. Five trials in each condition were practice trials and were excluded from analyses.
+
 ```{r trials_coded, message=FALSE, warning=FALSE, include=FALSE, paged.print=FALSE,  include=FALSE}
 trials_coded <- trials %>% 
   mutate(
@@ -278,28 +282,155 @@ trials_coded %>%
   )
 ```
 
-#### Stress position
-
-```{r trials_stress, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-trials_coded %>% 
-  select(trial_id, group, overlap_stress) %>% 
-  ggplot(aes(group, fill = overlap_stress, colour = overlap_stress)) +
-  geom_bar(position = position_dodge(width = 0.9)) +
-  labs(x = "Group", y = "# trials", fill = "Same stress position?", colour = "Same stress position?") +
-  theme_custom() +
-  theme(
-    legend.position = "top",
-    panel.grid.major.y = element_line(colour = "grey", linetype = "dotted")
-  )
-```
-
 #### {-}
 
 ### Design
 
+### Data analysis {.tabset .tab-pills}
 
-### Data analysis
+#### Model details
 
+We fitted a Bayesian multilevel regression model using the R package `brms` [@burkner2017brms], with correct responses (`correct`, 0 is incorrect response, 1 if correct response) as the response variable with a Bernoulli distribution and a logit link function. We modelled the probability of an average participant providing a correct response, conditional to a set of predictors (aka. fixed effects):
+
+* PTHN (`pthn`, 0-Inf): number of phonological neighbours with higher frequency of the target word. Extracted from the CLEARPOND database.
+* Vowel similarity (`vowel_ratio`, 0-1): edit distance between the sequence of vowels of the presented word  and the target word. Computed using custom code.
+* Consonant similarity (`consonant_ratio`, 0-1): edit distance between the sequence of consonants of the presented word and the target word. Computed using custom code.
+* Shared phonological onset (`onset`, 0 or 1): do the presented word and the target word share phonological onset? Manually coded.
+
+We also added participants (`participants`) and words (`word`) as grouping variables (aka., random effects), therefore adjusting the model to each participant and word. We specified random intercepts for both grouping variables, and random slopes for the fixed effects within the `participant` grouping variable.
+
+We model was implemented using the following formula:
+
+```
+correct ~ pthn + frequency + consonant_ratio + vowel_ratio + onset + overlap_stress + (1 + pthn + frequency + consonant_ratio + vowel_ratio + onset + overlap_stress | participant) + (1 | trial_id)
+```
+
+The estimation of the model was performed using Bayesian inference via Hamiltonian Monte-Carlo in Stan [@carpenter2017stan], with 4 chains, 2,000 intertions each. The output of this model is the approximated posterior distribution of all the parameters estimated, therefore indicating the probability of each combination of values of the parameters, conditional to the observed data. 
+
+
+#### Stan code
+
+Stan code generated by `brms`:
+
+```{stan stan_model, echo=TRUE, output.var="model"}
+// generated with brms 2.15.0
+functions {
+/* compute correlated group-level effects
+* Args: 
+*   z: matrix of unscaled group-level effects
+*   SD: vector of standard deviation parameters
+*   L: cholesky factor correlation matrix
+* Returns: 
+*   matrix of scaled group-level effects
+*/ 
+matrix scale_r_cor(matrix z, vector SD, matrix L) {
+// r is stored in another dimension order than z
+return transpose(diag_pre_multiply(SD, L) * z);
+}
+}
+data {
+int<lower=1> N;  // total number of observations
+int Y[N];  // response variable
+int<lower=1> K;  // number of population-level effects
+matrix[N, K] X;  // population-level design matrix
+// data for group-level effects of ID 1
+int<lower=1> N_1;  // number of grouping levels
+int<lower=1> M_1;  // number of coefficients per level
+int<lower=1> J_1[N];  // grouping indicator per observation
+// group-level predictor values
+vector[N] Z_1_1;
+vector[N] Z_1_2;
+vector[N] Z_1_3;
+vector[N] Z_1_4;
+vector[N] Z_1_5;
+vector[N] Z_1_6;
+vector[N] Z_1_7;
+int<lower=1> NC_1;  // number of group-level correlations
+// data for group-level effects of ID 2
+int<lower=1> N_2;  // number of grouping levels
+int<lower=1> M_2;  // number of coefficients per level
+int<lower=1> J_2[N];  // grouping indicator per observation
+// group-level predictor values
+vector[N] Z_2_1;
+int prior_only;  // should the likelihood be ignored?
+}
+transformed data {
+int Kc = K - 1;
+matrix[N, Kc] Xc;  // centered version of X without an intercept
+vector[Kc] means_X;  // column means of X before centering
+for (i in 2:K) {
+means_X[i - 1] = mean(X[, i]);
+Xc[, i - 1] = X[, i] - means_X[i - 1];
+}
+}
+parameters {
+vector[Kc] b;  // population-level effects
+real Intercept;  // temporary intercept for centered predictors
+matrix[M_1, N_1] z_1;  // standardized group-level effects
+cholesky_factor_corr[M_1] L_1;  // cholesky factor of correlation matrix
+vector<lower=0>[M_2] sd_2;  // group-level standard deviations
+vector[N_2] z_2[M_2];  // standardized group-level effects
+}
+transformed parameters {
+vector<lower=0>[M_1] sd_1;  // group-level standard deviations
+matrix[N_1, M_1] r_1;  // actual group-level effects
+// using vectors speeds up indexing in loops
+vector[N_1] r_1_1;
+vector[N_1] r_1_2;
+vector[N_1] r_1_3;
+vector[N_1] r_1_4;
+vector[N_1] r_1_5;
+vector[N_1] r_1_6;
+vector[N_1] r_1_7;
+vector[N_2] r_2_1;  // actual group-level effects
+sd_1 = rep_vector(1, rows(sd_1));
+// compute actual group-level effects
+r_1 = scale_r_cor(z_1, sd_1, L_1);
+r_1_1 = r_1[, 1];
+r_1_2 = r_1[, 2];
+r_1_3 = r_1[, 3];
+r_1_4 = r_1[, 4];
+r_1_5 = r_1[, 5];
+r_1_6 = r_1[, 6];
+r_1_7 = r_1[, 7];
+r_2_1 = (sd_2[1] * (z_2[1]));
+}
+model {
+// likelihood including constants
+if (!prior_only) {
+// initialize linear predictor term
+vector[N] mu = Intercept + rep_vector(0.0, N);
+for (n in 1:N) {
+// add more terms to the linear predictor
+mu[n] += r_1_1[J_1[n]] * Z_1_1[n] + r_1_2[J_1[n]] * Z_1_2[n] + r_1_3[J_1[n]] * Z_1_3[n] + r_1_4[J_1[n]] * Z_1_4[n] + r_1_5[J_1[n]] * Z_1_5[n] + r_1_6[J_1[n]] * Z_1_6[n] + r_1_7[J_1[n]] * Z_1_7[n] + r_2_1[J_2[n]] * Z_2_1[n];
+}
+target += bernoulli_logit_glm_lpmf(Y | Xc, mu, b);
+}
+// priors including constants
+target += normal_lpdf(b | 0, 1);
+target += normal_lpdf(Intercept | 0, 1);
+target += std_normal_lpdf(to_vector(z_1));
+target += lkj_corr_cholesky_lpdf(L_1 | 5);
+target += cauchy_lpdf(sd_2 | 0, 3)
+- 1 * cauchy_lccdf(0 | 0, 3);
+target += std_normal_lpdf(z_2[1]);
+}
+generated quantities {
+// actual population-level intercept
+real b_Intercept = Intercept - dot_product(means_X, b);
+// compute group-level correlations
+corr_matrix[M_1] Cor_1 = multiply_lower_tri_self_transpose(L_1);
+vector<lower=-1,upper=1>[NC_1] cor_1;
+// extract upper diagonal of correlation matrix
+for (k in 1:M_1) {
+for (j in 1:(k - 1)) {
+cor_1[choose(k - 1, 2) + j] = Cor_1[j, k];
+}
+}
+}
+```
+
+#### {-}
 
 ## Results {.tabset .tab-pill}
 
@@ -321,7 +452,7 @@ responses_item <- responses %>%
 
 ggplot(responses_item, aes(reorder(word_label, correct_prop), correct_prop, ymin = correct_prop-correct_se, ymax = correct_prop+correct_se, colour = group)) +
   facet_wrap(~group, scales = "free_y") +
-  geom_hline(yintercept = 0.5, colour = "red") +
+  geom_hline(yintercept = 0.5, colour = "black") +
   geom_errorbar() +
   geom_point(size = 0.5) +
   labs(y = "Correct responses", x = "Word", colour = "Group") +
@@ -329,11 +460,13 @@ ggplot(responses_item, aes(reorder(word_label, correct_prop), correct_prop, ymin
   scale_y_continuous(limits = c(0, 1), labels = scales::percent) +
   theme_custom() +
   theme(
+    legend.position = "none",
     axis.text.y = element_blank(),
     axis.ticks = element_blank(),
     axis.text.x = element_text(size = 9),
     panel.grid.major.x = element_line(colour = "grey", linetype = "dotted")
-  )
+  ) +
+  ggsave(here("Figures", "accuracy_item.png"))
 
 ```
 
@@ -355,7 +488,7 @@ responses_participant <- responses %>%
 
 ggplot(responses_participant, aes(reorder(participant_label, correct_prop), correct_prop, ymin = correct_prop-correct_se, ymax = correct_prop+correct_se, colour = group)) +
   facet_wrap(~group, scales = "free_y") +
-  geom_hline(yintercept = 0.5, colour = "red") +
+  geom_hline(yintercept = 0.5) +
   geom_errorbar(width = 0.5) +
   geom_point(size = 1) +
   labs(y = "Correct responses", x = "Participant", colour = "Group") +
@@ -363,160 +496,17 @@ ggplot(responses_participant, aes(reorder(participant_label, correct_prop), corr
   scale_y_continuous(limits = c(0, 1), labels = scales::percent) +
   theme_custom() +
   theme(
-    legend.position = "top",
+    legend.position = "none",
     axis.text.y = element_blank(),
     axis.ticks = element_blank(),
     axis.text.x = element_text(size = 9),
     panel.grid.major.x = element_line(colour = "grey", linetype = "dotted")
-  )
+  ) +
+  ggsave(here("Figures", "accuracy_participant.png"))
 
 ```
 
-### Bayesian regression model {.tabset .tab-pill}
-
-#### Model details
-
-We fitted a Bayesian multilevel regression model using the R package `brms` [@burkner2017brms], with correct responses (`correct`, 0 is incorrect response, 1 if correct response) as the response variable with a Bernoulli distribution and a logit link function. We modelled the probability of an average participant providing a correct response, conditional to a set of predictors (aka. fixed effects):
-
-* PTHN (`pthn`, 0-Inf): number of phonological neighbours with higher frequency of the target word. Extracted from the CLEARPOND database.
-* Lexical frequency (`frequency`, 0-Inf): lexical frequency (counts per million) of the target word. Extracted from the SUBTLEX database (via CLEAPOND).
-* Vowel similarity (`vowel_ratio`, 0-1): edit distance between the sequence of vowels of the presented word  and the target word. Computed using custom code.
-* Consonant similarity (`consonant_ratio`, 0-1): edit distance between the sequence of consonants of the presented word and the target word. Computed using custom code.
-* Shared phonological onset (`onset`, 0 or 1): do the presented word and the target word share phonological onset? Manually coded.
-* Share stress position (`overlap_stress`, 0 or 1): are the presented word and the target word stressed at the same position? Manually coded.
-
-We also added participants (`participants`) and words (`word`) as grouping variables (aka., random effects), therefore adjusting the model to each participant and word. We specified random intercepts for both grouping variables, and random slopes for the fixed effects within the `participant` grouping variable.
-
-We model was implemented using the following formula:
-
-```
-correct ~ pthn + frequency + consonant_ratio + vowel_ratio + onset + overlap_stress + (1 + pthn + frequency + consonant_ratio + vowel_ratio + onset + overlap_stress | participant) + (1 | trial_id)
-```
-
-The estimation of the model was performed using Bayesian inference via Hamiltonian Monte-Carlo in Stan [@carpenter2017stan], with 4 chains, 2,000 intertions each. The output of this model is the approximated posterior distribution of all the parameters estimated, therefore indicating the probability of each combination of values of the parameters, conditional to the observed data. 
-
-
-#### Stan code
-
-Stan code generated by `brms`:
-
-```{stan stan_model, echo=TRUE, output.var="model"}
-// generated with brms 2.15.0
-functions {
- /* compute correlated group-level effects
-  * Args: 
-  *   z: matrix of unscaled group-level effects
-  *   SD: vector of standard deviation parameters
-  *   L: cholesky factor correlation matrix
-  * Returns: 
-  *   matrix of scaled group-level effects
-  */ 
-  matrix scale_r_cor(matrix z, vector SD, matrix L) {
-    // r is stored in another dimension order than z
-    return transpose(diag_pre_multiply(SD, L) * z);
-  }
-}
-data {
-  int<lower=1> N;  // total number of observations
-  int Y[N];  // response variable
-  int<lower=1> K;  // number of population-level effects
-  matrix[N, K] X;  // population-level design matrix
-  // data for group-level effects of ID 1
-  int<lower=1> N_1;  // number of grouping levels
-  int<lower=1> M_1;  // number of coefficients per level
-  int<lower=1> J_1[N];  // grouping indicator per observation
-  // group-level predictor values
-  vector[N] Z_1_1;
-  vector[N] Z_1_2;
-  vector[N] Z_1_3;
-  vector[N] Z_1_4;
-  vector[N] Z_1_5;
-  vector[N] Z_1_6;
-  vector[N] Z_1_7;
-  int<lower=1> NC_1;  // number of group-level correlations
-  // data for group-level effects of ID 2
-  int<lower=1> N_2;  // number of grouping levels
-  int<lower=1> M_2;  // number of coefficients per level
-  int<lower=1> J_2[N];  // grouping indicator per observation
-  // group-level predictor values
-  vector[N] Z_2_1;
-  int prior_only;  // should the likelihood be ignored?
-}
-transformed data {
-  int Kc = K - 1;
-  matrix[N, Kc] Xc;  // centered version of X without an intercept
-  vector[Kc] means_X;  // column means of X before centering
-  for (i in 2:K) {
-    means_X[i - 1] = mean(X[, i]);
-    Xc[, i - 1] = X[, i] - means_X[i - 1];
-  }
-}
-parameters {
-  vector[Kc] b;  // population-level effects
-  real Intercept;  // temporary intercept for centered predictors
-  matrix[M_1, N_1] z_1;  // standardized group-level effects
-  cholesky_factor_corr[M_1] L_1;  // cholesky factor of correlation matrix
-  vector<lower=0>[M_2] sd_2;  // group-level standard deviations
-  vector[N_2] z_2[M_2];  // standardized group-level effects
-}
-transformed parameters {
-  vector<lower=0>[M_1] sd_1;  // group-level standard deviations
-  matrix[N_1, M_1] r_1;  // actual group-level effects
-  // using vectors speeds up indexing in loops
-  vector[N_1] r_1_1;
-  vector[N_1] r_1_2;
-  vector[N_1] r_1_3;
-  vector[N_1] r_1_4;
-  vector[N_1] r_1_5;
-  vector[N_1] r_1_6;
-  vector[N_1] r_1_7;
-  vector[N_2] r_2_1;  // actual group-level effects
-  sd_1 = rep_vector(1, rows(sd_1));
-  // compute actual group-level effects
-  r_1 = scale_r_cor(z_1, sd_1, L_1);
-  r_1_1 = r_1[, 1];
-  r_1_2 = r_1[, 2];
-  r_1_3 = r_1[, 3];
-  r_1_4 = r_1[, 4];
-  r_1_5 = r_1[, 5];
-  r_1_6 = r_1[, 6];
-  r_1_7 = r_1[, 7];
-  r_2_1 = (sd_2[1] * (z_2[1]));
-}
-model {
-  // likelihood including constants
-  if (!prior_only) {
-    // initialize linear predictor term
-    vector[N] mu = Intercept + rep_vector(0.0, N);
-    for (n in 1:N) {
-      // add more terms to the linear predictor
-      mu[n] += r_1_1[J_1[n]] * Z_1_1[n] + r_1_2[J_1[n]] * Z_1_2[n] + r_1_3[J_1[n]] * Z_1_3[n] + r_1_4[J_1[n]] * Z_1_4[n] + r_1_5[J_1[n]] * Z_1_5[n] + r_1_6[J_1[n]] * Z_1_6[n] + r_1_7[J_1[n]] * Z_1_7[n] + r_2_1[J_2[n]] * Z_2_1[n];
-    }
-    target += bernoulli_logit_glm_lpmf(Y | Xc, mu, b);
-  }
-  // priors including constants
-  target += normal_lpdf(b | 0, 1);
-  target += normal_lpdf(Intercept | 0, 1);
-  target += std_normal_lpdf(to_vector(z_1));
-  target += lkj_corr_cholesky_lpdf(L_1 | 5);
-  target += cauchy_lpdf(sd_2 | 0, 3)
-    - 1 * cauchy_lccdf(0 | 0, 3);
-  target += std_normal_lpdf(z_2[1]);
-}
-generated quantities {
-  // actual population-level intercept
-  real b_Intercept = Intercept - dot_product(means_X, b);
-  // compute group-level correlations
-  corr_matrix[M_1] Cor_1 = multiply_lower_tri_self_transpose(L_1);
-  vector<lower=-1,upper=1>[NC_1] cor_1;
-  // extract upper diagonal of correlation matrix
-  for (k in 1:M_1) {
-    for (j in 1:(k - 1)) {
-      cor_1[choose(k - 1, 2) + j] = Cor_1[j, k];
-    }
-  }
-}
-```
+### Model outputs {.tabset .tab-pill}
 
 ```{r responses_coded, message=FALSE, warning=FALSE, include=FALSE, paged.print=FALSE}
 responses_coded <- responses %>% 
@@ -565,7 +555,7 @@ summary(fit_responses)$fixed %>%
   ) %>% 
   tab_footnote(
     footnote = "Transformed using the divide-by-four- rule to get the maximum change in probability of correct response, associated with a unit increase in this variable.",
-    locations = cells_body(columns = "term", rows = term %in% c("pthn", "frequency", "consonant_ratio", "vowel_ratio", "onset1", "overlap_stress1"))
+    locations = cells_body(columns = "term", rows = term %in% c("pthn", "consonant_ratio", "vowel_ratio", "onset1"))
   ) %>% 
   tab_footnote(
     footnote = "ESS: Effective sample size",
@@ -584,7 +574,7 @@ post <- gather_draws(fit_responses, `b_.*`, regex = TRUE) %>%
 
 ggplot(post, aes(.value, fill = .variable)) +
   facet_wrap(~.variable, scales = "free") +
-  geom_vline(xintercept = 0, colour = "red") +
+  geom_vline(xintercept = 0) +
   stat_halfeye() +
   labs(x = "Value", y = "Posterior probability density", fill = "Variable") +
   theme_custom() +
@@ -593,9 +583,9 @@ ggplot(post, aes(.value, fill = .variable)) +
     axis.text = element_text(size = 7),
     panel.grid.major.x = element_line(colour = "grey", linetype = "dotted"),
     panel.grid.major.y = element_line(colour = "grey", linetype = "dotted")
-  )
+  ) +
+  ggsave(here("Figures", "responses_fixed.png"))
 ```
-
 
 #### Random effects
 
@@ -610,7 +600,7 @@ ggplot(post_re, aes(.value, sort(as.factor(participant)), xmin = .lower, xmax = 
   facet_grid(group~.param, scales = "free_y") +
   geom_errorbarh(height = 0.5, alpha = 0.75) +
   geom_point(size = 0.1, shape = 4) +
-  geom_vline(xintercept = 0, colour = "red") +
+  geom_vline(xintercept = 0) +
   labs(x = "Participant-level adjustment", y = "Participant", colour = "Group") +
   theme_custom() +
   theme(
@@ -624,9 +614,11 @@ ggplot(post_re, aes(.value, sort(as.factor(participant)), xmin = .lower, xmax = 
 ```
 
 
-#### Marginal effects
+#### Marginal effects {.tabset .tab-pills}
 
-```{r emmeans, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
+##### By PTHN
+
+```{r emmeans_pthn, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
 nd <- expand_grid(
   pthn = seq(
     min(responses_coded$pthn, na.rm = TRUE),
@@ -641,24 +633,120 @@ nd <- expand_grid(
   mutate(frequency = 0)
 
 m <- add_fitted_draws(nd, fit_responses, n = 20, re_formula = NA) %>% 
-  mutate_at(vars(ends_with("_ratio")),
-            function(x) ifelse(x>0, paste0(x, " SD"), paste0("-", x, " SD")))
+  mutate_at(vars(ends_with("_ratio")), function(x) paste0(x, " SD")) %>% 
+  mutate(
+    overlap_stress = paste0("Stress: ", overlap_stress),
+    onset = paste0("Onset: ", onset)
+  )
+
 
 ggplot(m, aes(pthn, .value, 
               colour = interaction(consonant_ratio, vowel_ratio, sep = "/"),
               fill = interaction(consonant_ratio, vowel_ratio, sep = "/"))) +
-  facet_grid(~overlap_stress~onset) +
-  stat_lineribbon(.width = 0.95, alpha = 0.25, size = 0) +
+  facet_wrap(~onset) +
+  # stat_lineribbon(.width = 0.95, alpha = 0.25, size = 0) +
   stat_summary(fun = mean, geom = "line", size = 1) +
   labs(x = "Phonological neighbourhood density\n(higher frequency neighbours)",
        y = "P(Correct)", colour = "Consonant/Vowel similarity",
-       fill = "Consonant similarity / Vowel similarity") +
+       fill = "Consonant similarity/Vowel similarity") +
+  guides(colour = guide_legend(ncol = 2)) +
   theme_custom() +
+  scale_y_continuous(labels = scales::percent) +
   theme(
     legend.position = "top",
     panel.grid = element_line(colour = "grey", linetype = "dotted")
-  )
+  ) +
+  ggsave(here("Figures", "responses_pthn.png"))
+
 ```
+
+
+
+##### By consonant similarity
+
+```{r emmeans_consonant, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
+nd <- expand_grid(
+  pthn = c(-1, 1),
+  onset = unique(responses_coded$onset),
+  overlap_stress = unique(responses_coded$overlap_stress),
+  vowel_ratio = c(-1, 1),
+  consonant_ratio = seq(
+    min(responses_coded$consonant_ratio, na.rm = TRUE),
+    max(responses_coded$consonant_ratio, na.rm = TRUE),
+    by = 0.1
+  )
+) %>% 
+  mutate(frequency = 0)
+
+m <- add_fitted_draws(nd, fit_responses, n = 20, re_formula = NA) %>% 
+  mutate_at(vars(vowel_ratio, pthn), function(x) paste0(x, " SD")) %>% 
+  mutate(
+    overlap_stress = paste0("Stress: ", overlap_stress),
+    onset = paste0("Onset: ", onset)
+  )
+
+ggplot(m, aes(consonant_ratio, .value, 
+              colour = interaction(pthn, vowel_ratio, sep = "/"),
+              fill = interaction(pthn, vowel_ratio, sep = "/"))) +
+  facet_wrap(~onset) +
+  # stat_lineribbon(.width = 0.95, alpha = 0.25, size = 0) +
+  stat_summary(fun = mean, geom = "line", size = 1) +
+  labs(x = "Consonant similarity (SD)",
+       y = "P(Correct)", colour = "PTHN/Vowel similarity",
+       fill = "PTHN/Vowel similarity") +
+  guides(colour = guide_legend(ncol = 2)) +
+  theme_custom() +
+  scale_y_continuous(labels = scales::percent) +
+  theme(
+    legend.position = "top",
+    panel.grid = element_line(colour = "grey", linetype = "dotted")
+  ) +
+  ggsave(here("Figures", "responses_consonant.png"))
+
+```
+
+##### By vowel similarity
+
+```{r emmeans_vowel, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
+nd <- expand_grid(
+  pthn = c(-1, 1),
+  onset = unique(responses_coded$onset),
+  overlap_stress = unique(responses_coded$overlap_stress),
+  vowel_ratio = seq(
+    min(responses_coded$vowel_ratio, na.rm = TRUE),
+    max(responses_coded$vowel_ratio, na.rm = TRUE),
+    by = 0.1
+  ),
+  consonant_ratio = c(-1, 1),
+) %>% 
+  mutate(frequency = 0)
+
+m <- add_fitted_draws(nd, fit_responses, n = 20, re_formula = NA) %>% 
+  mutate_at(vars(consonant_ratio, pthn), function(x) paste0(x, " SD")) %>% 
+  mutate(
+    overlap_stress = paste0("Stress: ", overlap_stress),
+    onset = paste0("Onset: ", onset)
+  )
+
+ggplot(m, aes(vowel_ratio, .value, 
+              colour = interaction(pthn, consonant_ratio, sep = "/"),
+              fill = interaction(pthn, consonant_ratio, sep = "/"))) +
+  facet_wrap(~onset) +
+  # stat_lineribbon(.width = 0.95, alpha = 0.25, size = 0) +
+  stat_summary(fun = mean, geom = "line", size = 1) +
+  labs(x = "Vowel similarity (SD)",
+       y = "P(Correct)", colour = "PTHN/Consonant similarity",
+       fill = "PTHN/Consonant similarity") +
+  guides(colour = guide_legend(ncol = 2)) +
+  theme_custom() +
+  scale_y_continuous(labels = scales::percent) +
+  theme(
+    legend.position = "top",
+    panel.grid = element_line(colour = "grey", linetype = "dotted")
+  ) +
+  ggsave(here("Figures", "responses_vowel.png"))
+```
+##### {-}
 
 #### {-}
 
@@ -672,18 +760,21 @@ ggplot(m, aes(pthn, .value,
 
 ```{r jtrace_all_plot, echo=FALSE, warning=FALSE}
 ggplot(jtrace, aes(x = activation, y = pct_participant)) +
-  geom_smooth() +
+  geom_smooth(colour = wes_palettes$Darjeeling1[1],
+              fill = wes_palettes$Darjeeling1[1],
+              alpha = 0.5) +
   geom_point(shape = 1, stroke = 1, alpha = 0.5) +
   labs(
     x = "jTRACE activation value for the word",
-    y = "% participants who responded with the word",
-    title = "jTRACE activation against % participants who gave word as response"
+    y = "Participants who responded with the word"
   ) +
+  scale_y_continuous(labels = scales::percent) +
   theme_custom() +
   theme(
     panel.grid.major.x = element_line(colour = "grey", linetype = "dotted"),
     panel.grid.major.y = element_line(colour = "grey", linetype = "dotted")
-  )
+  ) +
+  ggsave(here("Figures", "trace_average.png"))
 
 ```
 
@@ -697,7 +788,9 @@ jtrace %>%
   mutate(input_language = paste0(input, " (", language, ")")) %>% 
   ggplot(aes(x = activation, y = pct_participant)) +
   facet_wrap(~input_language) +
-  geom_smooth() +
+  geom_smooth(colour = wes_palettes$Darjeeling1[1],
+              fill = wes_palettes$Darjeeling1[1],
+              alpha = 0.5) +
   geom_point(shape = 1, stroke = 1, alpha = 0.5) +
   labs(
     x = "jTRACE activation value for the word",
@@ -794,7 +887,7 @@ ggplot(re, aes(Estimate, input, colour = input)) +
   facet_wrap(~.param) +
   geom_vline(xintercept = 0, colour = "red") +
   geom_errorbarh(aes(xmin = Estimate-Est.Error, xmax = Estimate+Est.Error), height = 0, size = 5, alpha = 0.5) +
-  geom_errorbarh(aes(xmin = Q2.5, xmax = Q97.5), height = 0) +
+  geom_errorbarh(aes(xmin = Q2.5, xmax = Q97.5), height = 0, size = 1) +
   geom_point() +
   labs(x = "Estimate", y = "Input", colour = "Input") +
   theme_custom() +
